--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-chromadb
-langchain
-langchain_huggingface
+numpy>=1.21.0
+PyPDF2>=3.0.0
+pysqlite3-binary
+langchain>=0.1.0
+chromadb>=0.4.24
+langchain-huggingface>=0.1.0
+streamlit>=1.25.0
+groq>=0.3.0
 langchain_groq
-sentence_transformers
-pypdf2
-numpy
