--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-numpy>=1.21.0
-PyPDF2>=3.0.0
-pysqlite3-binary
-langchain>=0.1.0
-chromadb>=0.4.24
-langchain-huggingface>=0.1.0
-streamlit>=1.25.0
-groq>=0.3.0
-langchain_groq
+streamlit==1.25.0
+chromadb==0.4.24
+langchain==0.0.300
+langchain-groq==0.0.5
+langchain-huggingface==0.0.4
+sentence-transformers==2.2.2
+pypdf2==3.0.1
+numpy==1.23.5
+torch==2.0.1
+requests==2.31.0
