--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy>=1.21.0
-PyPDF2>=3.0.0
-pysqlite3-binary
-langchain>=0.1.0
-chromadb>=0.4.24
-langchain-huggingface>=0.1.0
-streamlit>=1.25.0
-groq>=0.3.0
-langchain_groq
+streamlit>=1.33.0
+pysqlite3-binary>=0.5.0
+nest_asyncio>=1.6.0
+PyPDF2>=3.0.1
+langchain>=0.1.14
+langchain-huggingface>=0.0.6
+langchain-community>=0.0.29
+langchain-groq>=0.1.0
+chromadb>=0.3.21
