--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit>=1.33.0
-pysqlite3-binary>=0.5.0
-nest_asyncio>=1.6.0
-PyPDF2>=3.0.1
-langchain>=0.1.14
-langchain-huggingface>=0.0.6
-langchain-community>=0.0.29
-langchain-groq>=0.1.0
-chromadb>=0.3.21
+streamlit==1.25.0
+chromadb==0.4.24
+langchain==0.0.300
+langchain-groq==0.0.5
+langchain-huggingface==0.0.4
+sentence-transformers==2.2.2
+pypdf2==3.0.1
+numpy==1.23.5
+torch==2.0.1
+requests==2.31.0
